@@ -1,5 +1,8 @@
 Aug 25 2002  2.5.2  Optomizations to panelfront
                     Rudimentary deauthentication flood detection
+                    kismet_curses exit code used to determine if a kill of 
+                     kismet_server is necessary (eliminates bash errors on some
+                     conditions).
 Aug 24 2002  2.5.2  Fixed major problems introduced with yesterdays speed boost
                     Fixed gpsmap from yesterdays changes
 Aug 23 2002  2.5.2  Doubled (or more) the speed of packet tracking via 
